# AI-todo-chat-phase5

./: .dockerignore  .gitignore  .helmignore  Dockerfile  Dockerfile.audit  Dockerfile.backend  Dockerfile.frontend  Dockerfile.notification  Dockerfile.recurring  Dockerfile.reminder  Dockerfile.task  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  comprehensive_test.py  db-schema.sql  debug_ai.py  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  simple_test.py  start_with_compat.py  tailwind.config.js  test_agent_integration.py  test_api.py  test_api_failure.py  test_chat_endpoint.py  test_chatbot_fix.py  test_final_verification.py  test_fix.py  test_semantic_parsing.py  test_specific_issue.py  test_updated_ai_service.py  test_user_id_handling.py  tf_contrib_compat.py  todoapp.db  (+1 more)
app/: __init__.py  config.py  db.py  globals.css  layout.tsx  main.py  models.py  page.tsx
app/auth/: guards.py  jwt.py
app/chat/: page.tsx
app/components/: Footer.tsx  Hero.tsx  Navbar.tsx
app/dashboard/: page.tsx
app/routes/: auth.py  chatbot.py  notifications.py  recurring_tasks.py  tasks.py
app/services/: ai_service.py  chat_service.py  mcp_tool_wrappers.py  task_service.py
k8s/: monitoring.md
k8s/todo-chatbot/: values.yaml
specs/001-advanced-cloud-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-k8s-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/components/: ChatInterface.jsx  MessageList.jsx  RecurringTask.jsx  TaskCreation.jsx  (+1 more)
(+60 files in other folders)
